# paygo-application

./: README.md  test-integration.js
paygoback/: .env.example  PAYGO_WALLET_DOCS.md  README.md  TEST_RESULTS.md  idea  migrate-zcash-fields.js  package-lock.json  package.json  render.yaml  test-paygo.js  test-role-based-streaming.js
paygoback/billing/: .gitignore  Cargo.toml  README.md  migration.sql  startup.sh
paygoback/billing/src/: api.rs  billing.rs  blockchain.rs  cache.rs  config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs  validation.rs
paygoback/billing/src/zcash/: integrated_billing.rs  mod.rs  zcash_api.rs  zcash_service.rs
paygoback/src/: app.js  cleanupNullUsers.js  removeUserIdIndex.js  rm.js  webhooks.js
paygoback/src/controllers/: AdminProfile.js  Service.js  StreamingController.js  auth.js  billingController.js  wallet.js  (+8 more)
paygoback/tests/: paygo.test.js  role-based-streaming.test.js  setup.js
paygofrontend/: .env.production  .gitignore  AGORA_BACKEND_INTEGRATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
paygofrontend/app/: globals.css  layout.tsx  page.tsx
paygofrontend/lib/: auth.ts  blockchain.ts  videosdk.ts
paygosmart-contract/: README.md  deployed-contracts.txt  deployment-instructions.md  technical-summary.md
paygosmart-contract/abi/: PaygoBilling.json  PaygoEscrowVault.json  PaygoMarketplace.json  PaygoMerchantRegistry.json  PaygoSubscriptionScheduler.json
paygosmart-contract/script/: Config.s.sol  Deploy.s.sol  Deploy_MVP.s.sol
paygosmart-contract/src/: PayGoFactory.sol  PayGoSystem.sol
(+155 files in other folders)
