[package]
name = "paygo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
web3 = "0.19"
ethers = { version = "2.0", features = ["abigen", "ws"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.33", features = ["serde-float", "db-postgres"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
rand = "0.9.2"
regex = "1.10"
actix-web = { version = "4.4", features = ["cookies"] }
tokio-cron-scheduler = { version = "0.9", features = ["signal"] }
async-trait = "0.1"
rand_chacha = "0.3"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"